= THIS_GEM changelog

== Master (for 0.0.3)
* Add -O (--outline-selflink) option.
* Modify example/Rakefile not depend of *.html on directories.
* <HTML> header to <html> in HtmlGenerator.generate 
* Add bin/tex2image
* in example/Rakefile.
    * Add subdir target
    * Modify target from **/*.md to *.md in default target
    * Add 'tex2image' target

    * 'default' target includes 'tex2image' target

== Version 0.0.2 [2015-10-20]
* Add -C (--charset) option and default encoding is set to be 'us-ascii'

== Version 0.0.1 [2015-10-20]
* Add ' ' into title in dirmap.

== Version 0.0.0 [2015-10-20]
First release.