@@ -27,13 +27,14 @@ class Madowu::HtmlGenerator
   def generate(options = {})
     embed_outline(options[:selflink]) if options[:outline]
 
-    if options[:dirmap]
-      md_dir = Pathname.new(@md_file).dirname.expand_path
-      embed_sidebar( Madowu::DirectoryMapper.dirmap(md_dir) )
-    end
+    #if options[:dirmap]
+    #  md_dir = Pathname.new(@md_file).dirname.expand_path
+    #  embed_sidebar( Madowu::DirectoryMapper.dirmap(md_dir) )
+    #end
 
     if options[:sidebar]
-      lines = File.open( options[:sidebar], "r").readlines
+      #lines = File.open( options[:sidebar], "r").readlines
+      lines = `#{@markdown} #{options[:sidebar]}`.split("\n")
       embed_sidebar(lines)
     end
 
